# ChatRoom

./: CMakeCache.txt  CMakeLists.txt  ChatRoom  ChatRoomClient  ChatRoomServer  Makefile  cmake_install.cmake
ChatRoomClient_autogen/: moc_predefs.h  mocs_compilation.cpp
ChatRoomClient_autogen/7EM65HM6UG/: moc_MyClient.cpp  moc_MyClient.cpp.d
ChatRoomClient_autogen/C3ZIZSTKPY/: moc_ReceiverThread.cpp  moc_ReceiverThread.cpp.d  moc_SenderThread.cpp.d
ChatRoomClient_autogen/N4QHPNHBO3/: moc_customlineedit.cpp  moc_customlineedit.cpp.d  moc_sortedlistwidget.cpp  moc_sortedlistwidget.cpp.d
ChatRoomClient_autogen/VN52CJCQEB/: moc_ReceiverThread.cpp  moc_ReceiverThread.cpp.d  moc_SenderThread.cpp  moc_SenderThread.cpp.d
ChatRoomClient_autogen/YDAIGEWRAJ/: moc_ClientConfigDialog.cpp  moc_ClientConfigDialog.cpp.d  moc_MyClient.cpp  moc_MyClient.cpp.d
ChatRoomClient_autogen/ZDP5J4NNZP/: moc_ChatManager.cpp  moc_ChatManager.cpp.d  moc_ChatRoom.cpp  moc_ChatRoom.cpp.d  moc_MessageWidget.cpp  moc_MessageWidget.cpp.d
ChatRoomServer_autogen/: mocs_compilation.cpp
ChatRoomServer_autogen/CIAW6PGLSA/: moc_MyServer.cpp  moc_MyServer.cpp.d  moc_ServerConfigDialog.cpp  moc_ServerConfigDialog.cpp.d
ChatRoomServer_autogen/ECAI6Z3TWJ/: moc_customlineedit.cpp  moc_customlineedit.cpp.d
ChatRoomServer_autogen/N4QHPNHBO3/: moc_customlineedit.cpp.d
ChatRoomServer_autogen/ORNZQ2F6DW/: moc_MyServer.cpp.d  moc_ServerConfigDialog.cpp.d
ChatRoomServer_autogen/ZDP5J4NNZP/: moc_ChatManager.cpp.d  moc_ChatRoom.cpp  moc_ChatRoom.cpp.d
ChatRoom_autogen/: mocs_compilation.cpp
ChatRoom_autogen/ORNZQ2F6DW/: moc_ServerConfigDialog.cpp  moc_ServerConfigDialog.cpp.d
chatroom/include/: ChatManager.h  ChatRoom.h  Message.h  MessageWidget.h
chatroom/src/: ChatManager.cpp  ChatRoom.cpp  Message.cpp  MessageWidget.cpp
client/include/: ClientConfigDialog.h  MyClient.h
client/src/: ClientConfigDialog.cpp  MyClient.cpp  main.cpp
custom/include/: customlineedit.h  sortedlistwidget.h
custom/src/: customlineedit.cpp  sortedlistwidget.cpp
server/include/: MyServer.h  ServerConfigDialog.h
server/src/: MyServer.cpp  ServerConfigDialog.cpp  main.cpp
(+12 files in other folders)
